force-app/main/default/objects/Participant__c/Participant__c.object-meta.xml
<CustomObject>
    <label>Event Participation</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Participation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Participations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>