force-app/main/default/objects/Participant__c/fields/Badge_Retrieval__c.field-meta.xml
<CustomField>
    <fullName>Badge_Retrieval__c</fullName>
    <label>Badge Retrieval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>pre_print</fullName>
                <label>Pre-print by EAN</label>
            </value>
            <value>
                <fullName>onsite</fullName>
                <label>Onsite print</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>