force-app/main/default/objects/Participant__c/fields/Congress_Live_Access__c.field-meta.xml
<CustomField>
    <fullName>Congress_Live_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Congress Live Access</label>
    <type>Checkbox</type>
</CustomField>