force-app/main/default/objects/Participant__c/fields/Congress_On_Demand_Access__c.field-meta.xml
<CustomField>
    <fullName>Congress_On_Demand_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Congress On-Demand Access</label>
    <type>Checkbox</type>
</CustomField>