force-app/main/default/objects/Participant__c/fields/Event_custom__c.field-meta.xml
<CustomField>
    <fullName>Event_custom__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2) OR (3 AND 4)</booleanFilter>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Congress</value>
        </filterItems>
        <filterItems>
            <field>Event__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Congress</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>G2M</value>
        </filterItems>
        <filterItems>
            <field>Event__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>G2M</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>Event Participations</relationshipLabel>
    <relationshipName>Participants</relationshipName>
    <type>Lookup</type>
</CustomField>