force-app/main/default/objects/Participant__c/fields/Event_Exhibitor__c.field-meta.xml
<CustomField>
    <fullName>Event_Exhibitor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to Event Exhibitor record. Filled in if the current participant is a result of IPR event registration.</description>
    <inlineHelpText>Link to Event Exhibitor record. Filled in if the current participant is a result of IPR event registration.</inlineHelpText>
    <label>Event Exhibitor</label>
    <referenceTo>Event_Exhibitor__c</referenceTo>
    <relationshipLabel>Event Participations</relationshipLabel>
    <relationshipName>Event_Participations</relationshipName>
    <type>Lookup</type>
</CustomField>