force-app/main/default/objects/Participant__c/fields/Event_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Event_Group_Name__c</fullName>
    <formula>Event_Registration_Sub_Group__r.Event_Registration_Group__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Group Name</label>
    <type>Text</type>
</CustomField>