force-app/main/default/objects/Participant__c/fields/Event_Persona__c.field-meta.xml
<CustomField>
    <fullName>Event_Persona__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Says that this participant is event persona on selected event</description>
    <inlineHelpText>Says that this participant is event persona on selected event</inlineHelpText>
    <label>Event Persona</label>
    <referenceTo>Event_Persona__c</referenceTo>
    <relationshipLabel>Event Participations</relationshipLabel>
    <relationshipName>Event_Participations</relationshipName>
    <type>Lookup</type>
</CustomField>