force-app/main/default/objects/Participant__c/fields/Event_Registration_Sub_Group__c.field-meta.xml
<CustomField>
    <fullName>Event_Registration_Sub_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event Registration Sub Group</label>
    <referenceTo>Event_Registration_Sub_Group__c</referenceTo>
    <relationshipLabel>Event Participations</relationshipLabel>
    <relationshipName>Event_Participations</relationshipName>
    <type>Lookup</type>
</CustomField>