force-app/main/default/objects/Participant__c/fields/hidden__c.field-meta.xml
<CustomField>
    <fullName>hidden__c</fullName>
    <defaultValue>false</defaultValue>
    <label>hidden</label>
    <type>Checkbox</type>
</CustomField>