force-app/main/default/objects/Participant__c/fields/IndustryNews__c.field-meta.xml
<CustomField>
    <fullName>IndustryNews__c</fullName>
    <formula>Contact__r.IndustryNews__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>I agree to receive Industry news</label>
    <type>Checkbox</type>
</CustomField>