force-app/main/default/objects/Participant__c/fields/Invitation_Status_In_Group__c.field-meta.xml
<CustomField>
    <fullName>Invitation_Status_In_Group__c</fullName>
    <label>Invitation Status In Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Invited</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>