force-app/main/default/objects/Participant__c/fields/Lecture__c.field-meta.xml
<CustomField>
    <fullName>Lecture__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lecture</label>
    <referenceTo>Lecture__c</referenceTo>
    <relationshipName>Participants</relationshipName>
    <type>Lookup</type>
</CustomField>