force-app/main/default/objects/Participant__c/fields/Lecture_Presentation__c.field-meta.xml
<CustomField>
    <fullName>Lecture_Presentation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Says that this participant is Lecture Presentation (Speaker) on selected event</description>
    <inlineHelpText>Says that this participant is Lecture Presentation (Speaker) on selected event</inlineHelpText>
    <label>Lecture Presentation</label>
    <referenceTo>Speaker__c</referenceTo>
    <relationshipLabel>Event Participations</relationshipLabel>
    <relationshipName>Event_Participations</relationshipName>
    <type>Lookup</type>
</CustomField>