force-app/main/default/objects/Participant__c/fields/Participant_Email__c.field-meta.xml
<CustomField>
    <fullName>Participant_Email__c</fullName>
    <label>Participant Email</label>
    <type>Email</type>
</CustomField>