force-app/main/default/objects/Participant__c/fields/Presentation__c.field-meta.xml
<CustomField>
    <fullName>Presentation__c</fullName>
    <label>Presentation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ePoster presenter</fullName>
            </value>
            <value>
                <fullName>ePresentation presenter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>