force-app/main/default/objects/Participant__c/fields/QR_Code_needed__c.field-meta.xml
<CustomField>
    <fullName>QR_Code_needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QR Code needed</label>
    <type>Checkbox</type>
</CustomField>