force-app/main/default/objects/Participant__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FW Convenor</fullName>
            </value>
            <value>
                <fullName>FW speaker</fullName>
            </value>
            <value>
                <fullName>Group Participant</fullName>
            </value>
            <value>
                <fullName>Guest</fullName>
            </value>
            <value>
                <fullName>Head</fullName>
            </value>
            <value>
                <fullName>Investigator Award Winner</fullName>
            </value>
            <value>
                <fullName>MT convenor</fullName>
            </value>
            <value>
                <fullName>MT speaker</fullName>
            </value>
            <value>
                <fullName>Member</fullName>
            </value>
            <value>
                <fullName>Panel Member (Individual)</fullName>
            </value>
            <value>
                <fullName>Panel Member (Institution)</fullName>
            </value>
            <value>
                <fullName>Participant</fullName>
                <default>true</default>
                <label>Participant</label>
            </value>
            <value>
                <fullName>Poster session /sc chair</fullName>
            </value>
            <value>
                <fullName>Special session speaker</fullName>
            </value>
            <value>
                <fullName>Sponsor</fullName>
            </value>
            <value>
                <fullName>Sps convenor</fullName>
            </value>
            <value>
                <fullName>Sps speaker</fullName>
            </value>
            <value>
                <fullName>Stellar Lecture Speaker</fullName>
            </value>
            <value>
                <fullName>Tc convenor</fullName>
            </value>
            <value>
                <fullName>Tc speaker</fullName>
            </value>
            <value>
                <fullName>Tournament Participant</fullName>
            </value>
            <value>
                <fullName>Tournament Runner-up - Basic</fullName>
            </value>
            <value>
                <fullName>Tournament Runner-up - Clinical</fullName>
            </value>
            <value>
                <fullName>Tournament Winner</fullName>
            </value>
            <value>
                <fullName>Tournament Winner - Basic</fullName>
            </value>
            <value>
                <fullName>Tournament Winner - Clinical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>