force-app/main/default/objects/Participant__c/fields/Session__c.field-meta.xml
<CustomField>
    <fullName>Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Session</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Session__c.Event_custom__c</field>
            <operation>equals</operation>
            <valueField>$Source.Event_custom__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Session__c</referenceTo>
    <relationshipLabel>Session Participations</relationshipLabel>
    <relationshipName>Participants</relationshipName>
    <type>Lookup</type>
</CustomField>