force-app/main/default/objects/Participant__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Registered</fullName>
                <default>true</default>
                <label>Registered</label>
            </value>
            <value>
                <fullName>Participated</fullName>
            </value>
            <value>
                <fullName>Status 1</fullName>
                <isActive>false</isActive>
                <label>Status 1</label>
            </value>
            <value>
                <fullName>Status 2</fullName>
                <isActive>false</isActive>
                <label>Status 2</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>