force-app/main/default/objects/Participant__c/fields/Terms_Acceped__c.field-meta.xml
<CustomField>
    <fullName>Terms_Acceped__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Terms Acceped</label>
    <type>Checkbox</type>
</CustomField>