force-app/main/default/objects/Participant__c/fields/Tournament_Candidate__c.field-meta.xml
<CustomField>
    <fullName>Tournament_Candidate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tournament Candidate</label>
    <type>Checkbox</type>
</CustomField>