force-app/main/default/objects/Participant__c/fields/Visa_Letter__c.field-meta.xml
<CustomField>
    <fullName>Visa_Letter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visa Letter</label>
    <type>Checkbox</type>
</CustomField>