force-app/main/default/objects/Participant__c/recordTypes/Congress.recordType-meta.xml
<RecordType>
    <fullName>Congress</fullName>
    <active>true</active>
    <label>Congress</label>
</RecordType>