force-app/main/default/objects/Participant__c/listViews/Personas.listView-meta.xml
<ListView>
    <fullName>Personas</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Event_custom__c</columns>
    <columns>Contact__c</columns>
    <columns>Role__c</columns>
    <columns>Lecture_Presentation__c</columns>
    <columns>Event_Persona__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Event_Persona__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Lecture_Presentation__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Personas</label>
</ListView>