force-app/main/default/objects/Participant__c/listViews/Session_Participation.listView-meta.xml
<ListView>
    <fullName>Session_Participation</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Role__c</columns>
    <columns>Event_custom__c</columns>
    <columns>Contact__c</columns>
    <columns>Session__c</columns>
    <columns>Join_Time__c</columns>
    <columns>Duration_Seconds__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Session__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Session Participation</label>
</ListView>