force-app/main/default/objects/Participant__c/listViews/Undefined_Participants.listView-meta.xml
<ListView>
    <fullName>Undefined_Participants</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Contact__c</columns>
    <columns>Role__c</columns>
    <columns>Event_custom__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Event_Registration_Sub_Group__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Role__c</field>
        <operation>equals</operation>
        <value>Group_Participant</value>
    </filters>
    <filters>
        <field>Contact__c</field>
        <operation>equals</operation>
        <value>Undefined Participant</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Registered Draft</value>
    </filters>
    <label>Undefined Participants</label>
</ListView>